@@ -15,6 +15,7 @@
 - Fixed: Search on master data products list was broken after back press
 - Fixed: 'Due soon days' value in stock overview was always 5 days
 - Fixed: Grocycode not looked up when using external scanner (#472)
+- Fixed: Adding barcode now works on transaction pages even if product already selected (#480)
 
 2.0.0:
 Major changes since 1.10.1:
